# aosh

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
include/aosh/: color.h  parser.h  process.h  shell.h  version.h.in
include/aosh/commands/: echo.h  filesystem.h  help.h  ls.h  registry.h
include/aosh/completion/: command_provider.h  completer.h  completion_context.h  filesystem_provider.h  path_exe_provider.h  provider.h
src/: color.cpp  main.cpp  parser.cpp  process.cpp  shell.cpp
src/commands/: echo.cpp  filesystem.cpp  help.cpp  ls.cpp  registry.cpp
src/completion/: command_provider.cpp  completer.cpp  completion_context.cpp  filesystem_provider.cpp  path_exe_provider.cpp
